mType/tests/testFiles/import/error/importUnclosedString.mt
// Test: Unclosed string in import path
@Script
import { SomeClass } from "modules/SomeModule.mt

var obj = SomeClass();
